# TheaterEngine

./: .gitignore  CMakeLists.txt  Helpers.cmake  LICENSE  README.md
Editor/: CMakeLists.txt
Editor/include/TheaterEditor/: Editor.hpp
Editor/src/: Editor.cpp  Montserrat-Regular.hpp
Engine/: CMakeLists.txt
Engine/cmake/: TheaterEngineConfig.cmake.in
Engine/include/: TheaterGameplay
Engine/include/Theater/Engine/: EngineAPI.hpp  GameplayAPI.hpp  System.hpp
Engine/include/Theater/Engine/Actor/: Actor.hpp  Transform.hpp
Engine/include/Theater/Engine/Event/: Event.hpp  EventDispatcher.hpp
Engine/include/Theater/Engine/Filesystem/: Image.hpp
Engine/include/Theater/Engine/Game/: ActorRegistry.hpp  Game.hpp
Engine/include/Theater/Engine/Graphics/: Animation.hpp  Font.hpp  IRenderable.hpp  Material.hpp  Mesh.hpp  Model.hpp  RenderingSystem.hpp  RenderingTarget.hpp  Shader.hpp  Texture.hpp  Vertex.hpp
Engine/include/Theater/Engine/Math/: DebugMath.hpp  Mat3.hpp  Mat4.hpp  SIMD_Helpers.hpp  VECTOR.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
Engine/include/Theater/Engine/Platform/: ILibrary.hpp  IProcess.hpp  Joystick.h  WinSysEvents.hpp  WindowSystem.hpp
Engine/include/Theater/Engine/Resource/: AssetsRegistry.hpp  Resource.hpp  ResourceCache.hpp  ResourceSystem.hpp
Engine/include/Theater/Engine/Utility/: MemoryPool.hpp  String.hpp  UUID.hpp
Engine/include/Theater/GameplayAPI/: GameLibInterface.hpp  TheaterGameplay.hpp  TheaterMain.hpp
Engine/src/Actor/: Actor.cpp
Engine/src/Event/: EventDispatcher.cpp
Engine/src/Filesystem/: Image.cpp
Engine/src/Game/: ActorRegistry.cpp  Game.cpp
Engine/src/Graphics/: EngineShaders.hpp  Font.cpp  Mesh.cpp  Model.cpp  RendereringTarget.cpp  RenderingSystem.cpp  Shader.cpp  Texture.cpp  Vertex.cpp
Engine/src/Platform/: Joystick.cpp  Win32Joystick.cpp  Win32Joystick.h  Win32Library.cpp  Win32Library.hpp  Win32Process.cpp  Win32Process.hpp  Win32WindowSystem.cpp  Win32WindowSystem.hpp  WindowSystem.cpp
Engine/src/Resource/: AssetsRegistry.cpp
Engine/src/Utility/: MemoryPool.cpp  UUID.cpp
GameLib/: CMakeLists.txt
GameLib/src/: Launcher.cpp
GameProjectDemo/: Build.bat  CMakeLists.txt
GameProjectDemo/GameInterface/: GameLibInterface.cpp
GameProjectDemo/GameProject/: Main.cpp
GameProjectDemo/Sources/: Hero.cpp  Hero.hpp  Hero_Female.cpp  Hero_Female.hpp  MyGame.cpp  MyGame.hpp
GameProjectTemplate/: CMakeLists.txt
GameProjectTemplate/EditorInterface/: EditorInterface.cpp
GameProjectTemplate/Sources/: DemoActor.cpp  DemoActor.hpp
